# ptt-calc

./: .gitignore  Cargo.toml  README.md  README_zh.md  justfile  score.db
arcaea_data/: Cargo.toml  README.md  arcsong.db
arcaea_data/src/: chart.rs  lib.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
output/: score.db
src/: cli.rs  main.rs  ptt.rs  score.rs  song.rs  tui.rs
tui/src/: dioxus.rs
web/: Cargo.toml  score.db
web/assets/: b30.css
web/src/: b30.rs  main.rs  score.rs
web/templates/: b30.html.hbs
