
[package]
name = "ptt-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
sqlite = "0.31.1"
