[package]
name = "arcaea_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlite = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
dioxus     = {version = "0.4.0", optional = true}
